# Technosphere_DP

./: README.md
hw-1/: CMakeLists.txt  main.cpp
hw-1/include/: Descriptor.h  FileDes.h  Pipe.h  Process.h
hw-1/src/: CMakeLists.txt  Descriptor.cpp  FileDes.cpp  Pipe.cpp  Process.cpp
hw-1/test/: bypass.cpp  test.cpp
hw-2/: CMakeLists.txt  main.cpp
hw-2/include/: BaseLogger.h  Descriptor.h  FileDes.h  FileLogger.h  Global.h  Logger.h  StderrLogger.h  StdoutLogger.h  log.h
hw-2/src/: BaseLogger.cpp  CMakeLists.txt  Descriptor.cpp  FileDes.cpp  FileLogger.cpp  Global.cpp  Logger.cpp  StderrLogger.cpp  StdoutLogger.cpp
hw-2/test/: test_1.cpp  test_2.cpp  test_3.cpp  test_4.cpp
hw-3/: CMakeLists.txt
hw-3/include/: Connection.h  Descriptor.h  Server.h  TcpException.h  tcp.h
hw-3/src/: Connection.cpp  Descriptor.cpp  Server.cpp
hw-3/test/: client_test.cpp  server_test.cpp
hw-4/: CMakeLists.txt  main.cpp
hw-4/include/: Semaphore.h  ShMap.h  SharedAllocator.h  SharedMap.h  SharedMem.h  ShmemException.h  shmem.h
hw-4/src/: Semaphore.cpp  SharedAllocator.cpp  SharedMem.cpp
hw-5/: CMakeLists.txt
hw-5/include/: BufferedConnection.h  EPoll.h  IServiceListener.h  NetException.h  Service.h  net.h
hw-5/lib/: Connection.cpp  Connection.h  Descriptor.cpp  Descriptor.h  Server.cpp  Server.h  TcpException.h
hw-5/src/: BufferedConnection.cpp  EPoll.cpp  Service.cpp
hw-5/test/: test.cpp  write_test.cpp
hw-6/: CMakeLists.txt  main.cpp
hw-6/include/: BufferedConnection.h  EPoll.h  HttpConnection.h  HttpException.h  HttpService.h  NetException.h  Service.h  http.h
hw-6/lib/logger/: BaseLogger.cpp  FileLogger.h  Logger.h  StderrLogger.h  StdoutLogger.h
hw-6/lib/logger/include/: Global.h  Logger.h  StdoutLogger.h  log.h
hw-6/lib/logger/src/: Global.cpp
hw-6/lib/net/: BufferedConnection.cpp  BufferedConnection.h  EPoll.cpp  EPoll.h  Service.cpp  Service.h
hw-6/lib/net/include/: BufferedConnection.h  NetException.h  Service.h
hw-6/lib/net/src/: BufferedConnection.cpp  EPoll.cpp  Service.cpp
hw-6/lib/tcp/: Connection.cpp  Connection.h  Descriptor.cpp  Descriptor.h  Server.cpp  Server.h
hw-6/lib/tcp/include/: Connection.h  Descriptor.h
hw-6/lib/tcp/src/: Connection.cpp  Descriptor.cpp
hw-6/src/: BufferedConnection.cpp  EPoll.cpp  HttpConnection.cpp  HttpService.cpp  Service.cpp
hw-7/: CMakeLists.txt  main.cpp
hw-7/include/: HttpConnection.h  HttpException.h  HttpService.h
hw-7/lib/coroutine/include/: coroutine.h
hw-7/lib/coroutine/src/: Coroutine.cpp
hw-7/lib/logger/: BaseLogger.h  StdoutLogger.h
hw-7/lib/logger/include/: BaseLogger.h  FileLogger.h  StderrLogger.h
hw-7/lib/logger/src/: Logger.cpp
hw-7/lib/net/: EPoll.h  Service.cpp  Service.h
hw-7/lib/net/include/: EPoll.h  NetException.h  net.h
hw-7/lib/net/src/: BufferedConnection.cpp
hw-7/lib/tcp/: Descriptor.cpp  Descriptor.h  Server.h
hw-7/lib/tcp/include/: Server.h
hw-7/lib/tcp/src/: Descriptor.cpp  Server.cpp
hw-7/src/: HttpConnection.cpp  HttpService.cpp
